Baseline_implementation,compressoin and comparison of gpt2_small with dialogpt

--- a/Jupyter/DialoGPT-small_implementation.ipynb
+++ b/Jupyter/DialoGPT-small_implementation.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "62a05d50-f2a5-4cdb-ad01-9d92f76ebd69",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
     "dialogpt_tokenizer = GPT2Tokenizer.from_pretrained(dialogpt_name)\n",
     "dialogpt_model = GPT2LMHeadModel.from_pretrained(dialogpt_name)\n",
     "\n",
-    "# Same fix applies\n",
+    "\n",
     "dialogpt_tokenizer.pad_token = dialogpt_tokenizer.eos_token\n",
     "dialogpt_conversation_ids = None\n",
     "\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "da069a7b-2b5a-4854-84e0-bba17da894be",
    "metadata": {},
    "outputs": [],
@@ -88,13 +88,13 @@
     "def chat_dialogpt(user_input, max_new_tokens=80):\n",
     "    global dialogpt_conversation_ids\n",
     "\n",
-    "    # Encode user input + EOS\n",
+    "\n",
     "    new_input_ids = dialogpt_tokenizer.encode(\n",
     "        user_input + dialogpt_tokenizer.eos_token,\n",
     "        return_tensors=\"pt\"\n",
     "    )\n",
     "\n",
-    "    # Append conversation history\n",
+    "\n",
     "    if dialogpt_conversation_ids is None:\n",
     "        bot_input_ids = new_input_ids\n",
     "    else:\n",
@@ -114,7 +114,7 @@
     "            pad_token_id=dialogpt_tokenizer.eos_token_id\n",
     "        )\n",
     "\n",
-    "    # Decode only newly generated tokens\n",
+    "\n",
     "    reply = dialogpt_tokenizer.decode(\n",
     "        dialogpt_conversation_ids[:, bot_input_ids.shape[-1]:][0],\n",
     "        skip_special_tokens=True\n",
@@ -128,7 +128,29 @@
    "execution_count": null,
    "id": "e1bbc759-b8c0-4df7-8c18-42a3709f102c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  What is AI\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DialoGPT: what was the question?! I wanna know what happened to my questions about this game. Please don't answer it lol... :P EDIT PLS WHAT DID YOU DO TO MY POST OP D: lt 3333 xD Edit, Hahahaha no more replies.. phew hahahhaaaaahhh XD edit thanks for playing again u wot m8s bbxzz\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    user_input = input(\"You: \")\n",
