--- a/Jupyter/gpt2_small_Initial_implementation.ipynb
+++ b/Jupyter/gpt2_small_Initial_implementation.ipynb
@@ -97,12 +97,12 @@
     }
    ],
    "source": [
-    "model_name = \"gpt2\"   # this IS GPT-2 small\n",
+    "model_name = \"gpt2\"  \n",
     "\n",
     "tokenizer = GPT2Tokenizer.from_pretrained(model_name)\n",
     "model = GPT2LMHeadModel.from_pretrained(model_name)\n",
     "\n",
-    "model.eval()  # put model in inference mode\n"
+    "model.eval()  \n"
    ]
   },
   {
@@ -115,6 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "The following generation flags are not valid and may be ignored: ['temperature']. Set `TRANSFORMERS_VERBOSITY=info` for more details.\n",
       "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
@@ -124,9 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial intelligence is a very powerful tool that could be used to solve many problems. One of the main reasons for the importance of artificial intelligence is because it is able to solve complex problems such as classification, error analysis or statistical analysis.\n",
-      "\n",
-      "In\n"
+      "Artificial intelligence is a new field of research that has been in the works for a while now. It is a field that has been in the works for a while now. It is a field that has been in the works for a while now.\n"
      ]
     }
    ],
@@ -139,7 +138,7 @@
     "    outputs = model.generate(\n",
     "        inputs[\"input_ids\"],\n",
     "        max_length=50,\n",
-    "        do_sample=True,\n",
+    "        do_sample=False,\n",
     "        temperature=0.7\n",
     "    )\n",
     "\n",
@@ -187,43 +186,23 @@
      "output_type": "stream",
      "text": [
       "User: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant: Hello\n",
-      "Assistant:\n"
+      "Assistant: Hi\n",
+      "Assistant: What is your name?\n",
+      "Assistant: Joss\n",
+      "Assistant: Do you know what your name is?\n",
+      "Assistant:\n",
+      "Assistant: I'm in the studio and I am talking about the movie The Legend of Korra.\n",
+      "Assistant: You are Joss and you are talking about it?\n",
+      "Assistant: Yes, I am, I'm in the studio and I am talking about it.\n",
+      "Assistant: Do you know what your name is?\n",
+      "Assistant: Joss\n",
+      "Assistant: Are you a big fan of my work?\n",
+      "Assistant: Yes\n",
+      "Assistant: Have you ever played video games?\n",
+      "Assistant: Yes\n",
+      "Assistant: Have you ever played video games?\n",
+      "Assistant: Yes\n",
+      "Assistant\n"
      ]
     }
    ],
@@ -250,7 +229,7 @@
     "    conversation += f\"User: {user_input}\\nAssistant:\"\n",
     "    response = generate_response(conversation)\n",
     "\n",
-    "    # Extract only the last assistant reply\n",
+    "\n",
     "    assistant_reply = response[len(conversation):].split(\"User:\")[0]\n",
     "\n",
     "    conversation += assistant_reply + \"\\n\"\n",
@@ -259,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2c3c7cb1-2484-4239-84cb-f49032407e54",
    "metadata": {},
    "outputs": [
@@ -267,7 +246,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "You:  What is Artificial Intelligence ? \n"
+      "You:  Artificial intelligence is \n"
      ]
     },
     {
@@ -282,26 +261,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPT-2: What is Artificial Intelligence ?\n",
-      "Assistant: Where are we going ? \n",
-      "Assistant: Are we going to use it for anything ? \n",
-      "Assistant: What is it ? \n",
-      "Assistant: We have no choice? \n",
-      "Assistant: No. \n",
-      "Assistant: I'm not going to let you down. \n",
-      "Assistant: I can't. \n",
-      "Assistant: That's not what you're talking about. \n",
-      "Assistant: It's not going to work. \n",
-      "Assistant: Well, what you're saying is, if we're going to do that, we're going to do it for you. \n",
-      "Assistant: I mean, that's right. \n",
-      "Assistant: Yeah\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  exit\n"
+      "GPT-2: Artificial intelligence is \n",
+      "\n",
+      "Professor: Artificial intelligence is \n",
+      "\n",
+      "Approved by:\n",
+      "\n",
+      "Numerous members of the Advisory Council\n",
+      "\n",
+      "The first report of the Advisory Council was published in The Journal of Computational Systems, Vol. 4, No. 1, October, 1983.\n",
+      "\n",
+      "The report is available online at: http://www.nocsc.ac.uk/~brd-ncc/\n",
+      "\n",
+      "The first report is available at: http://www.nocsc.ac.uk/~brd-ncc/\n",
+      "\n",
+      "The first report was published in The Journal of Computational Systems, Vol. 4, No. 2, November, 1983\n"
      ]
     }
    ],
