--- a/Jupyter/gpt2_small_tunning_prompt_template.ipynb
+++ b/Jupyter/gpt2_small_tunning_prompt_template.ipynb
@@ -65,12 +65,12 @@
     }
    ],
    "source": [
-    "MODEL_NAME = \"gpt2\"   # GPT-2 Small (124M params)\n",
+    "MODEL_NAME = \"gpt2\"   \n",
     "\n",
     "tokenizer = GPT2Tokenizer.from_pretrained(MODEL_NAME)\n",
     "model = GPT2LMHeadModel.from_pretrained(MODEL_NAME)\n",
     "\n",
-    "# 🚨 IMPORTANT FIX (GPT-2 has no pad token)\n",
+    "\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "\n",
     "model.eval()\n"
@@ -166,21 +166,16 @@
     "def chat(user_input):\n",
     "    global conversation\n",
     "\n",
-    "    # Add user message\n",
+    "\n",
     "    conversation += f\"User: {user_input}\\nAssistant:\"\n",
     "\n",
-    "    # Generate text\n",
     "    response = generate_response(conversation)\n",
     "\n",
-    "    # Extract ONLY new assistant reply\n",
     "    assistant_reply = response[len(conversation):]\n",
     "\n",
-    "    # Stop if GPT-2 starts inventing new users\n",
     "    assistant_reply = assistant_reply.split(\"User:\")[0]\n",
     "\n",
-    "    # Save conversation\n",
     "    conversation += assistant_reply.strip() + \"\\n\"\n",
-    "\n",
     "    return assistant_reply.strip()\n"
    ]
   },
