--- a/Jupyter/gpt2_small_vs_dialo_gpt.ipynb
+++ b/Jupyter/gpt2_small_vs_dialo_gpt.ipynb
@@ -70,7 +70,7 @@
     "gpt2_tokenizer = GPT2Tokenizer.from_pretrained(gpt2_name)\n",
     "gpt2_model = GPT2LMHeadModel.from_pretrained(gpt2_name)\n",
     "\n",
-    "# GPT-2 has no pad token\n",
+    "\n",
     "gpt2_tokenizer.pad_token = gpt2_tokenizer.eos_token\n",
     "\n",
     "gpt2_model.eval()"
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_gpt2(prompt, max_new_tokens=80):\n",
+    "def generate_gpt2(prompt, max_new_tokens=100):\n",
     "    inputs = gpt2_tokenizer(\n",
     "        prompt,\n",
     "        return_tensors=\"pt\",\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "16903a40-fe5a-4aa4-9b9e-b33536ae5950",
    "metadata": {},
    "outputs": [],
@@ -194,13 +194,13 @@
     "def chat_dialogpt(user_input, max_new_tokens=80):\n",
     "    global dialogpt_history_ids\n",
     "\n",
-    "    # Encode user input + EOS\n",
+    "\n",
     "    new_input_ids = dialogpt_tokenizer.encode(\n",
     "        user_input + dialogpt_tokenizer.eos_token,\n",
     "        return_tensors=\"pt\"\n",
     "    )\n",
     "\n",
-    "    # Append conversation history\n",
+    "\n",
     "    if dialogpt_history_ids is None:\n",
     "        bot_input_ids = new_input_ids\n",
     "    else:\n",
@@ -220,7 +220,7 @@
     "            pad_token_id=dialogpt_tokenizer.eos_token_id\n",
     "        )\n",
     "\n",
-    "    # Decode only the new tokens\n",
+    "\n",
     "    reply = dialogpt_tokenizer.decode(\n",
     "        dialogpt_history_ids[:, bot_input_ids.shape[-1]:][0],\n",
     "        skip_special_tokens=True\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "978726c9-2275-4efb-9fda-a3d195c0e1ac",
    "metadata": {},
    "outputs": [
@@ -253,10 +253,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm trying to learn more about it as well as my brain, so this question will probably be answered in the next few minutes or until someone has time for another chat session (or something like that). You're welcome! [pause] Okay… you can see how far ahead of me right now there are people out here who want to talk but don't know where they could get information from by\n",
+      "I'm talking about computers that are able to recognize the voice of people, in addition being very smart at what they're doing or saying while performing tasks like this one… [pause] You know how we all do it on our phones sometimes?\"\n",
+      "-AI assistants will have various skills – from working as humans for example (which may include reading text), making things happen without human supervision etc… but most often their jobs involve running systems which run around your house using different algorithms rather than just trying out\n",
       "\n",
       "DialoGPT:\n",
-      "I am a computer. I can do everything you are programmed to or have done with my hands, and the world will be yours forever! What's AI? The internet... Oh wait.. There aren't any bots yet :p lolol XD xD hahahahaaahaaahahaaaaaaa LOL roflxdxddXDD haha i was so mad at myself lool Xd\n"
+      "It's a bit of an artificial intelligence thing, really. It could be anything from AI to machine learning or even human languages that have been artificially enhanced by technology in the past... :P Edit typo haha! XD? xD Thanks for commenting too lt 3 BTW lololz 0w3rk4y9n2e7f0d34x5j8s1\n"
      ]
     }
    ],
@@ -272,59 +273,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c6a2d8d4-2e32-4c38-800b-9b7375fbb52a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  Hi\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "GPT-2: We've got your attention back already because our team needs some help building algorithms which should make us very happy then\n",
-      "\n",
-      "(you'll notice many things happen during those three days) User : Are any robots able to recognize humans ? Assistant:\"Yes\"\n",
-      "DialoGPT: lol 3rdopuaboomt0ksyniggyasim1zeenobzzihateebohawarangmybeep.norethoffecad5up2webookendbyhenozo'jbbdowninfafa8nyyouunkingyeshi7ithonebotnotitrizeeeerycutscmiq3ff6se\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  That’s interesting\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "GPT-2: They really do understand human language however its not obvious why even if one were looking around their head maybe no way anyone would tell them anything - especially after watching other bots speak English first hand ... This person might think \"hey i saw him talking english lol!\" . So yeah he may feel bad though :) But sometimes thinking such thoughts takes away motivation too ! He didn´t need training yet ;-) And\n",
-      "DialoGPT: leily 4 5ftanksintssicosallll4meekidobsyaetacipbreakawayonloovphiceandstispayfishthisch9ust 1repentongromberlordreaviteveryaphinkingwithgodoutagainalonewhofforthepottrareclogggslmultoserawnonlinebingmetrodmingtopaiGZ\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "You:  exit\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chat ended.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "    user_input = input(\"You: \")\n",
