--- a/Jupyter/tuned_gpt2_small.ipynb
+++ b/Jupyter/tuned_gpt2_small.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "68f58eee-5b12-4e33-bd95-aabe133730ae",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "9156e3f8-d81f-4e9f-addc-7e6f38cc6f79",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "e3262562-ba59-418e-bb44-ddcba2b4c8ed",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "e0da9190-6b51-479a-9450-5782854d151d",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "0a3d9609-578a-4c61-bc43-2824202e4d64",
    "metadata": {},
    "outputs": [
@@ -152,14 +152,13 @@
     }
    ],
    "source": [
-    "# 5. TEST GENERATION\n",
     "input_text = \"The quick brown fox\"\n",
     "inputs = tokenizer(input_text, return_tensors=\"pt\").to(device)\n",
     "\n",
     "print(f\"Input Tokens: {inputs['input_ids']}\")\n",
     "\n",
-    "# Ask the model to continue the sentence\n",
-    "with torch.no_grad(): # Disable gradient calculation to save memory\n",
+    "\n",
+    "with torch.no_grad(): \n",
     "    outputs = model.generate(\n",
     "        **inputs, \n",
     "        max_length=20, \n",
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "d0c48603-d2f8-47a7-939e-a556adcbfb03",
    "metadata": {},
    "outputs": [
@@ -191,66 +190,19 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "YOU:  \n"
+      "YOU:  Artificial Intelligence is \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AI:  I am not sure if you know what a \"Hammer\" means, but it's probably an English word for something that was written in England and then translated into French by someone else who did so too (or maybe they were both writers). It\n",
+      "AI:  AI, not artificial intelligence (AI). It's a very interesting topic and I'm sure you'll find it fascinating to read about in this article or any other piece on our website!The UESPWiki – Your source for The Elder Scrolls\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "YOU:  What is Artificial Inteliigence ? \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AI:  It's a computer program that can read and write to any number, including numbers with no digits or letters in them (like \"1\" for example). This means it has an infinite amount more memory than most computers on earth! You could say this\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "YOU:  2+2 = ?\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AI:  Yes, it's a question that has been asked many times before and I think we all know what to do with this one!The following article was originally published on May 18th 2015 at 9am by David Boulton in his blog \"\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "YOU:  exit\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ending chat...\n"
      ]
     }
    ],
    "source": [
-    "# BLOCK 5: ROBUST CHAT (WITH REPETITION PENALTY)\n",
-    "# This version fixes the \"AI is AI\" loop problem.\n",
-    "\n",
     "def chat_with_model_robust():\n",
     "    print(\"=\"*50)\n",
     "    print(\"   BASELINE GPT-2 (UNCOMPRESSED)\")\n",
@@ -260,7 +212,7 @@
     "    if tokenizer.pad_token is None:\n",
     "        tokenizer.pad_token = tokenizer.eos_token\n",
     "\n",
-    "    # STRICTER PRIMER: Forces Q&A format\n",
+    "\n",
     "    primer = \"\"\"\n",
     "Q: What is the capital of France?\n",
     "A: The capital of France is Paris.\n",
@@ -279,7 +231,7 @@
     "            print(\"Ending chat...\")\n",
     "            break\n",
     "        \n",
-    "        # Format input to match the primer\n",
+    "\n",
     "        full_prompt = f\"{primer}Q: {user_input}\\nA:\"\n",
     "        \n",
     "        inputs = tokenizer(full_prompt, return_tensors=\"pt\", padding=True).to(device)\n",
@@ -291,24 +243,24 @@
     "                max_new_tokens=50,\n",
     "                do_sample=True,\n",
     "                top_k=50,\n",
-    "                top_p=0.90,             # Stricter (was 0.95)\n",
-    "                temperature=0.1,        # Lower temp = Less random/crazy\n",
-    "                repetition_penalty=1.2, # <--- THIS FIXES THE LOOPING\n",
-    "                no_repeat_ngram_size=2, # <--- PREVENTS \"AI is AI\" phrases\n",
+    "                top_p=0.90,          \n",
+    "                temperature=0.1,       \n",
+    "                repetition_penalty=1.2, \n",
+    "                no_repeat_ngram_size=2, \n",
     "                pad_token_id=tokenizer.eos_token_id,\n",
     "                eos_token_id=tokenizer.encode(\"\\n\")[0]\n",
     "            )\n",
     "\n",
     "        full_response = tokenizer.decode(output_ids[0], skip_special_tokens=True)\n",
     "        \n",
-    "        # Extract answer\n",
-    "        # We split by \"A:\" and take the last part\n",
+    "   \n",
+    "\n",
     "        try:\n",
-    "            # Find the part after our specific prompt\n",
+    "       \n",
     "            new_text = full_response[len(full_prompt):]\n",
-    "            # Stop at the next new line (if the model tries to write a new Q:)\n",
+    "          \n",
     "            answer = new_text.split(\"\\n\")[0].strip()\n",
-    "            # If empty (sometimes happens), take the raw generation\n",
+    "        \n",
     "            if not answer: \n",
     "                answer = new_text.strip()\n",
     "        except:\n",
@@ -316,7 +268,7 @@
     "\n",
     "        print(f\"AI:  {answer}\\n\")\n",
     "\n",
-    "# Run the Fixed Chat\n",
+    "\n",
     "chat_with_model_robust()"
    ]
   },
